feat: switch to vllm